# yt-live-voice-splitter

./: .gitignore  LICENSE.md  README.md  pyproject.toml
src/yt_live_voice_splitter/: __init__.py  main.py  splitter.py  splitter_legacy.py  transcriber.py
