[project]
name = "yt-live-voice-splitter"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "sjcl", email = "bebe@sjcl.me" }
]
dependencies = [
    "yt-dlp~=2023.3.4",
    "faster-whisper~=0.6.0",
    "ctranslate2~=3.15.1",
    "torchaudio~=2.0.2",
    "soundfile~=0.12.1",
    "watchdog~=3.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "setuptools~=67.8.0",
    "black~=23.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true
